Add filter trips ver2

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,10 @@
-.route-wrapper {
-    position: relative;
-}
+.switchWrapper {
+  position: relative;
 
-.route-wrapper > div {
-  position: absolute;
+  > :first-child ~ * {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
 }
